[project]
name = "pg-denet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurence-R", email = "sdjoid@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "ultralytics>=8.4.21",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
