[project]
name = "pg-denet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurence-R", email = "sdjoid@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lpips>=0.1.4",
    "numpy>=2.2.6",
    "piq>=0.8.0",
    "rawpy>=0.26.1",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "ultralytics>=8.4.21",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
